testdata/baselines/reference/submodule/conformance/jsdocParseStarEquals.errors.txt
a.js(1,5): error TS1047: A rest parameter cannot be optional.
a.js(3,12): error TS2370: A rest parameter must be of an array type.
a.js(12,14): error TS7006: Parameter 'f' implicitly has an 'any' type.


==== a.js (3 errors) ====
    /** @param {...*=} args
        ~~~~~~~~~~~~~~~~~~~
        @return {*=} */
    ~~~~
!!! error TS1047: A rest parameter cannot be optional.
    function f(...args) {
               ~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
        return null
    }
    
    /** @type *= */
    var x;
    
    
    /** @param {function():*=} f */
    function cbf(f) {
                 ~
!!! error TS7006: Parameter 'f' implicitly has an 'any' type.
    }
    